--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <header>
       <nav>
         <ul class="nav-right-section">
-          <li><a href="/">Gmail</a></li>
+          <li><a href="/" role="link" name=Gmail>Gmail</a></li>
           <li><a href="/">Imágenes</a></li>
-          <li>
-            <a href="/"
+          <li class="li-svg">
+            <a href="/" role="button" name="Google Aps" 
               ><svg class="navbar-svg" focusable="false" viewBox="0 0 24 24">
                 <path
                   d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"
                 ></path></svg
             ></a>
           </li>
-          <li>
-            <a href="/">
+          <li class="li-photo">
+            <a href="/" role="button" name="Cuenta de Google: Sergio Jáuregui Angel">
               <img
                 class="navbar-photo"
                 src="https://lh3.googleusercontent.com/ogw/ADea4I5uCgzfQVCEebGc3IwUPXA_qU1mfO4TAg3c1z-G6VU=s32-c-mo"
