--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
       <nav>
         <ul class="nav-right-section">
-          <li><a href="/" role="link" name=Gmail>Gmail</a></li>
+          <li><a href="/" role="link" name="Gmail">Gmail</a></li>
           <li><a href="/">Imágenes</a></li>
           <li class="li-svg">
-            <a href="/" role="button" name="Google Aps" 
+            <a href="/" role="button" name="Google Aps"
               ><svg class="navbar-svg" focusable="false" viewBox="0 0 24 24">
                 <path
                   d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"
@@ -22,7 +22,11 @@
             ></a>
           </li>
           <li class="li-photo">
-            <a href="/" role="button" name="Cuenta de Google: Sergio Jáuregui Angel">
+            <a
+              href="/"
+              role="button"
+              name="Cuenta de Google: Sergio Jáuregui Angel"
+            >
               <img
                 class="navbar-photo"
                 src="https://lh3.googleusercontent.com/ogw/ADea4I5uCgzfQVCEebGc3IwUPXA_qU1mfO4TAg3c1z-G6VU=s32-c-mo"
@@ -32,6 +36,27 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <div class="main-container">
+        <div class="title">
+          <img
+            class="lnXdpd"
+            alt="Google"
+            height="92"
+            src="https://upload.wikimedia.org/wikipedia/commons/9/95/Transparent_google_logo_2015.png"
+            width="272"
+          />
+        </div>
+        <div class="input-search">
+          <input type="text" name="Google" />
+          <div class="buttons">
+            <button>Buscar con Google</button>
+            <button>Me siento con suerte</button>
+          </div>
+        </div>
+        
+      </div>
+    </main>
     <!-- <svg
       class="goxjub"
       focusable="false"
