--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav>
         <ul class="nav-right-section">
           <li><a href="/" role="link" name="Gmail">Gmail</a></li>
-          <li><a href="/">Imágenes</a></li>
+          <li><a href="/">Images</a></li>
           <li class="li-svg">
             <a href="/" role="button" name="Google Aps"
               ><svg class="navbar-svg" focusable="false" viewBox="0 0 24 24">
@@ -50,8 +50,8 @@
         <div class="input-search">
           <input type="text" name="Google" />
           <div class="buttons">
-            <button>Buscar con Google</button>
-            <button>Me siento con suerte</button>
+            <button>Search Google</button>
+            <button>I'm feeling lucky</button>
           </div>
         </div>
       </div>
@@ -63,17 +63,17 @@
       <div class="footer-menu">
         <div class="footer-menu-left">
           <ul>
-            <li>Sobre Google</li>
-            <li>Publicidad</li>
-            <li>Negocios</li>
-            <li>Cómo funciona la búsqueda</li>
+            <li>About Google</li>
+            <li>Publicity</li>
+            <li>Business</li>
+            <li>How search works</li>
           </ul>
         </div>
         <div class="footer-menu-right">
           <ul>
-            <li>Privacidad</li>
-            <li>Condiciones</li>
-            <li>Preferencias</li>
+            <li>Privacy</li>
+            <li>Conditions</li>
+            <li>Preferences</li>
           </ul>
         </div>
       </div>
